<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingVertical="6dp"
    android:paddingHorizontal="8dp"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/connector_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/connector_icon"
        android:src="@drawable/unknown_charger" />

    <TextView
        android:id="@+id/connector_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connector_multiplier"
        android:layout_marginStart="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/connector_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connector_power"
        android:layout_marginStart="8dp"
        android:textSize="14sp"/>
</LinearLayout>
